# zhenxun_bot

./: .dockerignore  .env  .env.dev  .gitgignore  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README-en_US.md  README-ja_JP.md  README-yue_HK.md  README-zh_TW.md  README.md  README_Ancient_Chinese.md  README_Pinyin_Chinese.md  README_code_Python.md  README_en-US.md  README_ja-JP.md  README_std-C++.md  README_zh_TW.md  README_zh_emoji.md  README_摩斯密码.md  __version__  __version__.json  admin_manager.py  bot.py  index.html  pyproject.toml  requirements.txt  search-index.json  service-worker.js  sitemap.xml  update_info.json  win启动.bat
.docusaurus/: client-manifest.json  client-modules.js  codeTranslations.json  docusaurus.config.mjs  globalData.json  i18n.json  registry.js  routes.js  routesChunkNames.json  site-metadata.json
.github/: release-drafter.yml
.github/ISSUE_TEMPLATE/: bug-issue-template.md  bug_report.yml  feature_request.yml  issue-template.md
.github/workflows/: Generate.yml  ISSUE_TEMPLATE.md  bot_check.yml  codeql.yml  linting.yml  publish-docker.yml  pyright.yml  release_draft.yml  ruff.yml  update_version.yml  update_version_pr.yml
about/: index.html
assets/css/: 0.styles.1b524b13.css  0.styles.2199300a.css  0.styles.3af13d03.css  0.styles.452633db.css  0.styles.57bfd2c6.css  0.styles.57e13963.css  0.styles.7deda930.css  0.styles.8af9daac.css  0.styles.97518b74.css  0.styles.97a8b470.css  0.styles.c2e9a96f.css  0.styles.cc3a5495.css  0.styles.f77825aa.css  styles.099d214c.css  styles.8816be06.css  styles.a023a0e3.css
assets/js/: 0480b142.a7865d6d.js  0841d1e9.ac8e1090.js  0841d1e9.cdf8e379.js  0b9d8e41.ea04b205.js  0bacbbaf.8dc49940.js  0bacbbaf.afe28c49.js  0dcd631f.82bc4d98.js  0dcd631f.bfc3fa75.js  0e384e19.8efc1c71.js  1.5a85ab28.js  1.b4f3b67c.js  1.b6369614.js  1.bbc69b0d.js  1.c6360fc1.js  1.cbf575ea.js  1.cdeec391.js  1.d0645364.js  10.02c706ee.js  10.08b3afb2.js  10.43e159f5.js  10.604839ab.js  10.6e6aa73e.js  10.771c744c.js  10.847f1071.js  10.85279de8.js  10.bc531bcb.js  10.c36c3cdb.js  10.c59f6c61.js  10.d8b4303c.js  11.0b6a2442.js  11.1a65b199.js  11.25d7a4e0.js  11.2733a77d.js  11.2e8cd130.js  11.441290f5.js  11.57ced948.js  11.5c87898d.js  11.6a5a592d.js  11.72ea5dfe.js  11.88ddc2a0.js  (+1143 more)
basic_plugins/: nickname.py  scripts.py  update_info.py
basic_plugins/admin_bot_manage/: __init__.py  _data_source.py  admin_config.py  custom_welcome_message.py  data_source.py  rule.py  switch_rule.py  timing_task.py  update_group_member_info.py
basic_plugins/admin_help/: __init__.py  data_source.py
basic_plugins/apscheduler/: __init__.py
basic_plugins/auto_invite/: __init__.py
basic_plugins/ban/: __init__.py  data_source.py
basic_plugins/broadcast/: __init__.py
basic_plugins/chat_history/: __init__.py  _rule.py  chat_message.py  chat_message_handle.py
basic_plugins/group_handle/: __init__.py
basic_plugins/help/: __init__.py  _config.py  _data_source.py  _utils.py  data_source.py  utils.py
basic_plugins/hooks/: __init__.py  _utils.py  auth_hook.py  ban_hook.py  chkdsk_hook.py  limit_hook.py  other_hook.py  task_hook.py  utils.py  withdraw_message_hook.py
basic_plugins/init_plugin_config/: __init__.py  check_plugin_status.py  init.py  init_group_manager.py  init_none_plugin_count_manager.py  init_plugin_info.py  init_plugins_config.py  init_plugins_data.py  init_plugins_limit.py  init_plugins_resources.py  init_plugins_settings.py
basic_plugins/invite_manager/: __init__.py  utils.py
basic_plugins/plugin_shop/: __init__.py  data_source.py
basic_plugins/shop/: __init__.py  buy.py  gold.py  my_props.py  reset_today_gold.py
basic_plugins/super_cmd/: __init__.py  bot_friend_group.py  clear_data.py  data_source.py  exec_sql.py  manager_group.py  reload_setting.py  set_admin_permissions.py  super_task_switch.py  update_friend_group_info.py
basic_plugins/super_help/: __init__.py  data_source.py
beginner/: index.html
blogs/: about.html
categories/: index.html
configs/: config.py  path_config.py
configs/utils/: __init__.py  init_config.py  util.py
data/: anime.json
data/genshin_alc/: config.json
dev/: index.html
development/base_data/: index.html
development/config/: index.html
development/message/: index.html
development/shop/: index.html
development/withdraw/: index.html
docs/: index.html
faq/: index.html
guide/: index.html
help/: help01.html  index.html
install/: index.html
install_xiaobai/: index.html
intro/: index.html
markdown-page/: index.html
models/: bag_user.py  ban_user.py  buff_price.py  chat_history.py  count_user.py  friend_user.py  good_morning_night_user.py  goods_info.py  group_info.py  group_member_info.py  group_remind.py  level_user.py  omega_pixiv_illusts.py  open_cases_user.py  pixiv.py  pixiv_keyword_user.py  redbag_user.py  russian_user.py  setu.py  shop_log.py  sigin_group_user.py  sign_group_user.py  user_shop_gold_log.py
plugins/: about.py  admin_config.py  database_scripts.py  fake_msg.py  fudu.py  group_welcome_msg.py  hook.py  jitang.py  member_activity_handle.py  mute.py  my_info.py  nbnhhsh.py  nickname.py  parse_bilibili_json.py  pid_search.py  quotations.py  roll.py  server_ip.py  statistics_handle.py  statistics_hook.py  test.py  update_info.py  update_pic.py  update_picture.py  white2black_image.py  white2black_img.py  withdraw.py
scripts/: bot_check.py
search/: index.html
services/: __init__.py  db_context.py  init_config.py  log.py  service_config.py
tag/: index.html
tests/: config.py  conftest.py  utils.py
timeline/: index.html
updatalogs/: index.html
util/: data_utils.py  get_bilibili_img.py  img_utils.py  init_result.py  user_agent.py  utils.py
utils/: browser.py  data_utils.py  game_utils.py  http_utils.py  image_template.py  image_utils.py  img_utils.py  langconv.py  message_builder.py  text_utils.py  typing.py  user_agent.py  utils.py
(+1033 files in other folders)
